// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="root"
>
  <Card
    dense={false}
    disabled={false}
    key=".0"
    raised={false}
    type={null}
    variant="flat"
  >
    content
  </Card>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="root"
>
  <Card
    dense={false}
    disabled={false}
    key=".0"
    raised={false}
    type={null}
    variant="flat"
  >
    content 1
  </Card>
  <Card
    dense={false}
    disabled={false}
    key=".1"
    raised={false}
    type={null}
    variant="flat"
  >
    content 2
  </Card>
  <Card
    dense={false}
    disabled={false}
    key=".2"
    raised={false}
    type={null}
    variant="flat"
  >
    content 3
  </Card>
</div>
`;

exports[`rendering renders correctly with no children 1`] = `""`;
